Add client secret JSON file to .gitignore to prevent accidental exposure. This update enhances security by ensuring sensitive configuration files are not tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ yarn.lock
 wp-config-local.php
 local-config.php
 
+.snippets\client_secret_232278541761-qjdirgv383kdlc2meohu4ee7o45i12q6.apps.googleusercontent.com.json
