Update .gitignore to include patterns for Google OAuth client secret JSON files, enhancing security by preventing sensitive information from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,7 @@ yarn.lock
 wp-config-local.php
 local-config.php
 
-.snippets\client_secret_232278541761-qjdirgv383kdlc2meohu4ee7o45i12q6.apps.googleusercontent.com.json
+# Credenciales de Google OAuth (NO subir al repositorio)
+client_secret_*.json
+client_secret_*.app.googleusercontent.com.json
+*client_secret*.json
